k8s-v2/product.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-db-deployment
  namespace: ecommerce-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-db
  template:
    metadata:
      labels:
        app: products-db
    spec:
      containers:
        - name: products-db
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: products-db-storage
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 10
            periodSeconds: 5
      volumes:
        - name: products-db-storage
          persistentVolumeClaim:
            claimName: products-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: products-db
  namespace: ecommerce-v2
spec:
  selector:
    app: products-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
  namespace: ecommerce-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          image: ineutrono/ecm-product-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9001
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          startupProbe:
            tcpSocket:
              port: 9001
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 30
          livenessProbe:
            tcpSocket:
              port: 9001
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 9001
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: ecommerce-v2
spec:
  selector:
    app: product
  ports:
    - port: 9001
      targetPort: 9001
  type: ClusterIP
